<resources>
    <string name="app_name">Прокрастинатор 2.0</string>
    <string name="taskNameHint">Название</string>
    <string name="buttonDate">Дата</string>
    <string name="buttonCreate">Создать</string>
    <string name="errorNoTextInEditText">Обязательно для заполнения</string>
    <string name="wasted">Просрочено</string>
    <string name="today">Сегодня</string>
    <string name="moveTaskToToday">На сегодня</string>
    <string name="moveTaskToTomorrow">На завтра</string>
    <string name="moveTaskToDayAfterTomorrow">На послезавтра</string>
    <string name="moveTaskToNextWeek">На следующую неделю</string>
    <string name="moveTaskToAnotherDate">На другую дату</string>
    <string name="moveTaskHint">Перенести задачу</string>
    <string name="toastWrongTaskId">Неверный идентификатор задачи.</string>
    <string name="tomorrow">Завтра</string>
    <plurals name="staleTasksCount">
        <item quantity="zero">Нет просроченных задач</item>
        <item quantity="one">%1$s задача просрочена</item>
        <item quantity="two">%1$s задачи просрочены</item>
        <item quantity="few">%1$s задачи просрочены</item>
        <item quantity="many">%1$s задач просрочено</item>
        <item quantity="other">%1$s задач просрочено</item>
    </plurals>
    <string name="noStaleTasks">Нет просроченных задач</string>
    <plurals name="todayTasksCount">
        <item quantity="zero">Нет задач на сегодня</item>
        <item quantity="one">%1$s задача на сегодня</item>
        <item quantity="two">%1$s задачи на сегодня</item>
        <item quantity="few">%1$s задачи на сегодня</item>
        <item quantity="many">%1$s задач на сегодня</item>
        <item quantity="other">%1$s задач на сегодня</item>
    </plurals>
    <string name="noTodayTasks">Нет задач на сегодня</string>
    <plurals name="futureTasksCount">
        <item quantity="zero">Нет задач на потом</item>
        <item quantity="one">%1$s задача на потом</item>
        <item quantity="two">%1$s задачи на потом</item>
        <item quantity="few">%1$s задачи на потом</item>
        <item quantity="many">%1$s задач на потом</item>
        <item quantity="other">%1$s задач на потом</item>
    </plurals>
    <string name="noFutureTasks">Нет задач на потом</string>
    <string name="withoutCategoryTitle">Без категории</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="newCategoryDialogTitle">Новая категория квестов</string>
    <string name="newCategoryDialogMessage">Создавайте категории квестов для удобства их сортировки, хранения и поиска.</string>
    <string name="newCategoryDialogHint">Название категории</string>
    <string name="buttonCancel">Отмена</string>
    <string name="fragmentCategoriesTitle">Квесты</string>
    <plurals name="activeQuestsCount">
        <item quantity="zero">%1$s активных квестов</item>
        <item quantity="one">%1$s активный квест</item>
        <item quantity="two">%1$s активных квеста</item>
        <item quantity="few">%1$s активных квеста</item>
        <item quantity="many">%1$s активных квестов</item>
        <item quantity="other">%1$s активных квестов</item>
    </plurals>
    <string name="tabTasksTitle">Задачи</string>
    <string name="tabDataTitle">Материалы</string>
    <string name="delete">Удалить</string>
    <string name="deleteQuestDialogTitle">Удалить квест?</string>
    <string name="deleteQuestDialogMessage">Вместе с квестом будут также удалены все относящиеся к нему задачи и материалы.</string>
    <string name="emptyViewTitle">Здесь пусто</string>
    <string name="categoryEmptyViewHint">В этой категории нет ни одного квеста</string>
    <string name="activeTask">Активная задача</string>
    <string name="taskActionsHint">С помощью добавления действий к задаче можно создать контрольный список</string>
    <string name="buttonNewAction">Добавить действие</string>
    <string name="toastTaskNotFound">Задача не найдена.</string>
    <string name="finishedTask">Выполненная задача</string>
    <string name="addActionDialogTitle">Новое действие</string>
    <string name="addActionDialogMessage">Добавьте действие в контрольный список. Напишите \"Список:\" и введите действия через запятую, чтобы добавить их все за один раз.</string>
    <string name="addActionDialogHint">Описание</string>
    <string name="buttonAdd">Добавить</string>
    <string name="changeCategoryDialogTitle">Переместить в категорию:</string>
    <string name="taskActionsNotEmptyHint">Контрольный список</string>
    <string name="setDeadline">Установить крайний срок</string>
    <string name="deadlineDate">Крайний срок: %1$s</string>
    <string name="deadlineToday">Крайний срок</string>
    <plurals name="daysBeforeDeadline">
        <item quantity="zero">ещё %1$s дней</item>
        <item quantity="one">ещё %1$s день</item>
        <item quantity="two">ещё %1$s дня</item>
        <item quantity="few">ещё %1$s дня</item>
        <item quantity="many">ещё %1$s дней</item>
        <item quantity="other">ещё %1$s дней</item>
    </plurals>
    <string name="whenDate">Когда: %1$s</string>
    <string name="dataFragmentEmptyViewHint">В этом квесте нет материалов</string>
    <string name="tasksFragmentEmptyViewHint">В этом квесте нет задач</string>
    <string name="heapDataFragmentEmptyViewHint">В куче нет материалов</string>
    <string name="heapTasksFragmentEmptyViewHint">В куче нет задач</string>
    <string name="fragmentNewNoteTitle">Новая заметка</string>
    <string name="noteTitleHint">Название</string>
    <string name="noteContentHint">Текст</string>
    <string name="confirmNoteCancelingDialogTitle">Отменить создание заметки?</string>
    <string name="confirmNoteCancelingDialogMessage">Ваша заметка не будет сохранена.</string>
    <string name="buttonYes">Да</string>
    <string name="buttonNo">Нет</string>
    <string name="yesterday">Вчера</string>
    <string name="dayBeforeYesterday">Позавчера</string>
    <string name="dayAfterTomorrow">Послезавтра</string>
    <string name="editTitle">Редактирование</string>
    <string name="saveChangesQuestion">Сохранить изменения?</string>
    <string name="saveChangesNoteMessage">В заметку внесены изменения.</string>
    <string name="searchFragmentTitle">Поиск</string>
    <string name="searchEmptyViewTitle">Поиск</string>
    <string name="searchEmptyViewHint">Осуществляйте поиск\nсреди задач и материалов</string>
    <string name="queryHint">Название или содержимое…</string>
    <string name="searchEmptyViewTitleNoResults">Ничего не найдено</string>
    <string name="searchEmptyViewHintNoResults">Попробуйте изменить условия поиска</string>
    <string name="tasksDividerText">Завершённые задачи</string>
    <string name="deleteNoteDialogTitle">Удалить заметку?</string>
    <string name="deleteNoteDialogMessage">Заметка будет удалена без возможности восстановления.</string>
    <string name="navDrawerDatabaseTitle">База данных</string>
    <string name="fragmentDatabaseTitle">База данных</string>
    <string name="databaseInfoExport">База данных приложения хранится в защищенной внутренней памяти устройства и будет удалена вместе с удалением приложения. Чтобы выполнить резервное копирование или перенести свои данные на другое устройство используйте функцию экспорта базы данных.</string>
    <string name="buttonDatabaseExport">Экспорт базы данных</string>
    <string name="databaseInfoImport">Чтобы загрузить в приложение экспортированную ранее базу данных, используйте функцию импорта. При этом существующая в приложении база данных будет перезаписана без возможности восстановления.</string>
    <string name="buttonDatabaseImport">Импорт базы данных</string>
    <string name="permissionsDialogTitle">Перейти в настройки?</string>
    <string name="permissionsDialogMessage">Приложению необходимы разрешения на работу с хранилищем вашего устройства. Вы можете предоставить их в системных настройках приложения.</string>
    <string name="toastNoFileManager">Не найден файловый менеджер.</string>
    <string name="buttonGoTo">Перейти</string>
    <string name="toastDbExportSuccess">База данных успешно экспортирована.</string>
    <string name="toastDbFileOperationError">Произошла ошибка при работе с файлом базы данных.</string>
    <string name="errorTooBigFile">Файл слишком большой. Максимальный размер файла: %1$s Мб.</string>
    <string name="toastWrongFileFormatForImport">Некорректный файл. Файл базы данных имеет расширение \".db\"</string>
    <string name="databaseImportDialogTitle">Импортировать базу данных?</string>
    <string name="databaseImportDialogMessage">Рабочая база данных в приложении будет перезаписана без возможности восстановления.</string>
    <string name="databaseImportDialogAction">Импортировать</string>
    <string name="toastDbImportSuccess">База данных успешно импортирована.</string>
    <string name="chipToday">Сегодня</string>
    <string name="chipTomorrow">Завтра</string>
    <string name="chipDayAfterTomorrow">Послезавтра</string>
    <string name="weekLater">Через неделю</string>
    <string name="twoWeeksLater">2 недели</string>
    <string name="fourWeeksLater">4 недели</string>
    <string name="nextMonday">В следующий понедельник</string>
    <string name="buttonTime">Во сколько: в течение дня</string>
    <string name="buttonTimeWithArgs">Во сколько: %1$s:%2$s</string>
    <string name="dailyNotificationsChannelName">Ежедневные уведомления</string>
    <string name="dailyNotificationsChannelDescription">Уведомления о планах на день и об оставшихся задачах в конце дня</string>
    <string name="reminderNotificationsChannelName">Напоминания о задачах</string>
    <string name="reminderNotificationsChannelDescription">Напоминания о задачах, запланированных на определённое время</string>
    <string name="debugNotificationsChannelName">Отладка</string>
    <string name="debugNotificationsChannelDescription">Отладочная информация для разработчиков</string>
    <string name="buttonUnderstood">Понятно</string>
    <string name="alarmsPermissionsDialogTitle">Проблемы с разрешениями</string>
    <string name="alarmsPermissionsDialogMessage">Похоже, что у приложения отозваны разрешения на установку будильников и напоминаний. Без этих разрешений напоминания могут срабатывать невовремя или не срабатывать совсем.</string>
    <string name="eveningNotificationTitle">Остались невыполненные задачи</string>
    <string name="eveningNotificationAction">Двигаем всё на завтра!</string>
    <string name="morningNotificationTitle">Доброе утро!</string>
    <plurals name="morningNotificationMessage">
        <item quantity="zero">На сегодня запланировано %1$s задач:</item>
        <item quantity="one">На сегодня запланирована %1$s задача:</item>
        <item quantity="two">На сегодня запланированы %1$s задачи:</item>
        <item quantity="few">На сегодня запланированы %1$s задачи:</item>
        <item quantity="many">На сегодня запланированы %1$s задач:</item>
        <item quantity="other">На сегодня запланированы %1$s задач:</item>
    </plurals>
    <string name="chipReminder5Min">за 5 мин</string>
    <string name="chipReminder10Min">за 10 мин</string>
    <string name="chipReminder15Min">за 15 мин</string>
    <string name="chipReminder30Min">за 30 мин</string>
    <string name="chipReminder1Hour">за 1 час</string>
    <string name="chipReminder2Hours">за 2 часа</string>
    <string name="finishAndCreateNew">Завершить и создать <b><i>новую</i></b></string>
    <string name="finishAndCopy">Завершить и создать <b><i>копию</i></b></string>
    <string name="justFinish">Просто <b><i>завершить</i></b> задачу</string>
    <string name="finishTaskHint">Завершить задачу</string>
    <string name="cdClearDeadline">Убрать крайний срок</string>
    <string name="cdClearTime">Убрать время</string>
    <string name="nextMonth">Через месяц</string>
    <string name="nextYear">Через год</string>
</resources>